Fixed server list shifting when hovering

--- a/_sass/n3fs-theme.scss
+++ b/_sass/n3fs-theme.scss
@@ -249,6 +249,7 @@ article{
       }
 
       &:hover, &:focus{
+        border: none;
         background-image: none;
         background-color: $foreground-color;
         color: $background-color;
